...
            }
        }
    }
    
    var registerHeader: some View {
        VStack(alignment: .leading) {
            Text("Sign up")
                .foregroundColor(.blueApp)
                .font(.largeTitle)
                .fontWeight(.bold)
            Text("Please create a new account")
                .font(.headline)
        }
...
    
    var inputForm: some View {
        VStack(alignment: .leading, spacing: 20) {
            TextFieldView(title: "Email", text: $username)
                .keyboardType(.emailAddress)
            SecureTextFieldView(title: "Password", text: $password)
            SecureTextFieldView(title: "Confirm password", text: $confirmPassword)
        }
        
    }
}

