...
                othersNotesView
            }
            .accentColor(.blue)
            .navigationBarTitleDisplayMode(.inline)
            .navigationBarItems(leading: profileButton, trailing: createNoteButton)
            .modifier(AlertModifier(showAlert: $showingAlert,
                                    title: "Sign out",
                                    message: "Are you sure?",
                                    confirmButtonText: "Sign out",
                                    onConfirm: { Task {
                viewModel.signOut()
            }}))
            
...
        .onChange(of: reloadNote) { _ in
            viewModel.fetchNotes()
            reloadNote = false
        }
        .onReceive(viewModel.$isSignout) { appRouter.state = $0 ? .signin : appRouter.state }
        .onReceive(viewModel.$isLoading) { isLoading = $0 }
        .accessibilityIdentifier("homeScreenElement") // for unit test
        
    }
}

// MARK: - Computed Properties
private extension HomeView {
...
